<resources>
    <string name="app_name">ViciBerlin</string>
    <string name="search_hint">Suche Postleitzahl</string>
    <string name="search_title">PLZ</string>
    <string name="lcoation_item_title">Location</string>

    <!--Main-->
    <string name="sub_title">Alles über Deine Nachbarschaft</string>
    <string name="press_long_or_choose_plz">Drücke lang auf einen Ort oder suche direkt nach einer Postleitzahl</string>

    <!--Login-->
    <string name="login_description">Melde Dich an, um Bewertungen für die Kieze abzugeben.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logged_in_as">Angemeldet als&#160;</string>

    <!--Titles-->
    <string name="mapview">Kartenansicht</string>
    <string name="demography">Demographie</string>
    <string name="age">Alter</string>
    <string name="gender">Frauen/Männer</string>
    <string name="location">Wohnlage</string>
    <string name="duration">Wohndauer</string>
    <string name="foreigners">Ausländeranteil</string>
    <string name="compare">Andere Bezirke im Vergleich</string>
    <string name="most_equal">Ähnlichste Bezirke</string>
    <string name="less_equal">Unterschiedlichste Bezirke</string>
    <string name="restaurants">Restaurants:&#160;</string>
    <string name="cafes">Cafés:&#160;</string>
    <string name="nightlife">Nightlife:&#160;</string>
    <string name="yelp">Yelp</string>
    <string name="twitter">Twitter</string>
    <string name="userratings">Userbewertungen</string>
    <string name="rate_this">Bewerte diesen Kiez</string>

    <string name="demography_popup_title">Demographische Daten</string>

    <!--Equal Regions-->
    <string name="equal_age">Ähnliche Bezirke (Altersverteilung)</string>
    <string name="equal_gender">Ähnliche Bezirke (Geschlechterverteilung)</string>
    <string name="equal_location">Ähnliche Bezirke (Wohnlage)</string>
    <string name="equal_duration">Ähnliche Bezirke (Wohndauer)</string>
    <string name="equal_foreigners">Ähnliche Bezirke (Ausländeranteil)</string>

    <!--Rating-->
    <string name="please_rate">Bewerte den Kiez</string>
    <string name="culture">Gastro / Kultur</string>
    <string name="infrastructure">Infrastruktur</string>
    <string name="green">Grünflächen</string>
    <string name="safety">Sicherheit</string>

    <!--Labels-->
    <string name="percent">Prozent</string>
    <string name="years">Lebensjahre</string>
    <string name="to_12">unter 12</string>
    <string name="from_65">über 65</string>
    <string name="male">Männer</string>
    <string name="female">Frauen</string>
    <string name="simple">Einfach</string>
    <string name="mid">Mittel</string>
    <string name="good">Gut</string>
    <string name="less_than_5_years">unter 5 Jahre</string>
    <string name="five_to_10_years">5-10 Jahre</string>
    <string name="more_than_10_years">über 10 Jahre</string>
    <string name="foreign_residents">Ausländische Einwohner</string>
    <string name="per_km2">&#160;pro km2</string>
    <string name="key_average">grau: Berliner Durchschnitt</string>

    <!--Hints-->
    <string name="no_berlin_zipcode">Bitte wählen Sie eine Berliner PLZ</string>
    <string name="no_available_zipcode">Bitte wählen Sie einen anderen Ort in der Nähe</string>
    <string name="no_internet">Schwache Internetverbindung, bitte geben Sie die PLZ in das Suchfeld ein</string>
    <string name="activate_location_services">Bitte aktivieren Sie Location Services und warten Sie einen Moment, damit Ihr Standort ermittelt werden kann.</string>
    <string name="none">keine</string>
    <string name="title_activity_draw">DrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Buttons-->
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="close">Schließen</string>

    <!--Tags-->
    <string name="plz_tag">plzTag</string>
    <string name="plz_name_tag">plzNameTag</string>
    <string name="charttype_tag">chartTypeTag</string>


</resources>
